--- a/index.css
+++ b/index.css
@@ -21,10 +21,12 @@ header{
 }
 
 nav{
-    height: 40px;
-    margin: 3px 0px 0px 0px;
-    padding-top: 23px;
-    padding-left: 3px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    justify-content: center;
+    margin: 3px 0px ;
+    padding: 3px;
     background-color: black;
 }
 
