--- a/index.css
+++ b/index.css
@@ -23,22 +23,28 @@ header{
 nav{
     display: flex;
     flex-wrap: wrap;
-    margin: auto;
     justify-content: center;
-    margin: 3px 0px ;
     padding: 3px;
     background-color: black;
 }
 
-nav a{
-    text-decoration: none;
-    color: white;
-    padding: 20px;
-    border-radius: 6px;
-    transition-duration: .3s;
+nav div{
+    margin: 8px;   
 }
 
-nav > a:hover{
+nav a{
+    text-decoration: none;
+    text-align: center;
+    color: white;
+    padding: 7px;
+    border-radius: 6px;
+    transition-duration: .3s;
+    margin: auto;
+    width: 90px;
+    display: block;
+}
+
+nav a:hover{
     background-color: var(--cor05);
 }
 
